<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
                name="device"
                type="com.ljpww72729.atblink.data.Device"/>
    </data>

    <android.support.constraint.ConstraintLayout
            android:id="@+id/constraint_layout"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:text="@string/device_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@+id/device_id"
                android:id="@+id/textView4"/>

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/device_id"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                android:hint="形如：lp_iot_000"
                app:layout_constraintLeft_toRightOf="@+id/textView4"
                android:layout_marginLeft="8dp"
                android:text="@={device.deviceId}"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"/>

        <TextView
                android:text="@string/device_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:id="@+id/textView5"
                app:layout_constraintBaseline_toBaselineOf="@+id/device_name"/>

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/device_name"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/textView5"
                android:layout_marginLeft="8dp"
                app:layout_constraintHorizontal_bias="0.0"
                android:text="@={device.deviceName}"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/device_id"/>

        <TextView
                android:text="@string/auto_generate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/auto_generate"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="@+id/device_id"
                app:layout_constraintBaseline_toBaselineOf="@+id/device_id"/>

    </android.support.constraint.ConstraintLayout>
</layout>